--- a/Banking.Domain/Banking.Domain.csproj
+++ b/Banking.Domain/Banking.Domain.csproj
@@ -1,18 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Banking.Application\Banking.Application.csproj" />
+    <Folder Include="Rules\" />
+    <Folder Include="ValueObjects\" />
   </ItemGroup>
 
 </Project>
