--- a/Banking.API/appsettings.json
+++ b/Banking.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  [
+  "NotificationRules": [
     {
       "EventType": "TransactionExecutedEvent",
       "Condition": "Success == true && Amount > 500",
