--- a/Banking.Application/Banking.Application.csproj
+++ b/Banking.Application/Banking.Application.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DynamicExpresso.Core" Version="2.19.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Banking.Domain\Banking.Domain.csproj" />
   </ItemGroup>
 
