Add account flow done

--- a/Banking.API/appsettings.json
+++ b/Banking.API/appsettings.json
@@ -1,4 +1,25 @@
 {
+  "RuleDefinitions": {
+    "Rules": [
+      {
+        "RuleName": "RequireCreditScoreForLoan",
+        "EventType": "CreateAccountRequest",
+        "Condition": "AccountType.ToString() == \"Loan\" && InitialDeposit > 10000", // just mock -> currently loan cannot be created because of CreateAccountRequestValidationTransactionCommandHandler
+        //"Condition": "AccountType.ToString() == \"Standard\" && InitialDeposit > 499", // This one will trigger "Waiting for approval"
+        "Action": "SetProperty", // mock - not used
+        "Property": "CreditScoreChecked", // mock - not used
+        "Value": "true"
+      },
+      {
+        "RuleName": "RequireManagerApprovalIfCreditCheckTriggered", // just mock -> EXPECTED -> throws ex "Unknown identifier 'CreditScoreChecked'"
+        "EventType": "CreateAccountRequest",
+        "Condition": "CreditScoreChecked == true",
+        "Action": "SetProperty",
+        "Property": "ManagerApprovalRequired",
+        "Value": "true"
+      }
+    ]
+  },
   "NotificationRules": [
     {
       "EventType": "TransactionExecutedEvent",
