--- a/Banking.API/Banking.API.csproj
+++ b/Banking.API/Banking.API.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\Banking.Infrastructure\Banking.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
