deposit transaction progress

--- a/Banking.API/appsettings.json
+++ b/Banking.API/appsettings.json
@@ -51,6 +51,7 @@
     },
     "FeeSettings": {
       "DefaultCurrency": "EUR",
+      "DefaultAccountNumber": "DE89 3704 0044 0532 0130 00",
       "BankIdentifier": "BANK001",
       "MinimumBalanceThreshold": [
         {
@@ -80,7 +81,8 @@
         {
           "Amount": 15.0,
           "Currency": "USD",
-          "Type": "Flat"
+          "Type": "Flat",
+          "AccountNumber": "DE42 5837 1920 4031 7295"
         }
       ],
       "StandardTransferFee": [
