--- a/Banking.API/appsettings.json
+++ b/Banking.API/appsettings.json
@@ -50,37 +50,37 @@
       }
     },
     "FeeSettings": {
-      "DefaultCurrency": "EUR",
+      "DefaultCurrencyCode": "EUR",
       "DefaultAccountNumber": "DE89 3704 0044 0532 0130 00",
       "BankIdentifier": "BANK001",
       "MinimumBalanceThreshold": [
         {
           "Amount": 500.0,
-          "Currency": "USD",
+          "CurrencyCode": "USD",
           "Type": "Flat"
         },
         {
           "Amount": 300.0,
-          "Currency": "EUR",
+          "CurrencyCode": "EUR",
           "Type": "Flat"
         }
       ],
       "MinimumBalanceFee": [
         {
           "Amount": 25.0,
-          "Currency": "USD",
+          "CurrencyCode": "USD",
           "Type": "Flat"
         },
         {
           "Amount": 20.0,
-          "Currency": "EUR",
+          "CurrencyCode": "EUR",
           "Type": "Flat"
         }
       ],
       "InternationalTransferFee": [
         {
           "Amount": 15.0,
-          "Currency": "USD",
+          "CurrencyCode": "USD",
           "Type": "Flat",
           "AccountNumber": "DE42 5837 1920 4031 7295"
         }
@@ -88,7 +88,7 @@
       "StandardTransferFee": [
         {
           "Amount": 5.0,
-          "Currency": "USD",
+          "CurrencyCode": "USD",
           "Type": "Flat"
         }
       ],
@@ -96,21 +96,21 @@
         "MobileApp": [
           {
             "Amount": 1.5,
-            "Currency": "USD",
+            "CurrencyCode": "USD",
             "Type": "Flat"
           }
         ],
         "ATM": [
           {
             "Amount": 2.0,
-            "Currency": "USD",
+            "CurrencyCode": "USD",
             "Type": "Flat"
           }
         ],
         "WebPortal": [
           {
             "Amount": 1.0,
-            "Currency": "USD",
+            "CurrencyCode": "USD",
             "Type": "Flat"
           }
         ]
@@ -118,7 +118,7 @@
       "NonSameBankWithdrawal": [
         {
           "Amount": 0.10,
-          "Currency": "USD",
+          "CurrencyCode": "USD",
           "Type": "Percentage"
         }
       ]
