--- a/Banking.API/appsettings.json
+++ b/Banking.API/appsettings.json
@@ -51,7 +51,7 @@
     },
     "FeeSettings": {
       "DefaultCurrencyCode": "EUR",
-      "DefaultAccountNumber": "DE89 3704 0044 0532 0130 00",
+      "DefaultAccountId": "1a8df24e-0679-41f6-a53c-f37a0c114bb0",
       "BankIdentifier": "BANK001",
       "MinimumBalanceThreshold": [
         {
@@ -82,7 +82,7 @@
           "Amount": 15.0,
           "CurrencyCode": "USD",
           "Type": "Flat",
-          "AccountNumber": "DE42 5837 1920 4031 7295"
+          "AccountNumber": "1a8df24e-0679-41f6-a53c-f37a0c114bb0"
         }
       ],
       "StandardTransferFee": [
